--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 ################################################################################
 
 /openGl_test/obj
+/openGl_test/bin/Debug/netcoreapp3.1/openGl_test.pdb
+/openGl_test/bin/Debug/netcoreapp3.1/openGl_test.runtimeconfig.dev.json
+/openGl_test/bin/Debug/netcoreapp3.1/openGl_test.runtimeconfig.json
+/openGl_test/bin/Debug/netcoreapp3.1/openGl_test.exe
+/openGl_test/bin/Debug/netcoreapp3.1/openGl_test.dll
+/openGl_test/bin/Debug/netcoreapp3.1/openGl_test.deps.json
