--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /openGl_test/bin/Debug/netcoreapp3.1/openGl_test.exe
 /openGl_test/bin/Debug/netcoreapp3.1/openGl_test.dll
 /openGl_test/bin/Debug/netcoreapp3.1/openGl_test.deps.json
+/.vs/ogl1/v16/.suo
