--- a/openGl_test/openGl_test.csproj
+++ b/openGl_test/openGl_test.csproj
@@ -9,6 +9,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <NoWarn>1701;1702;IDE1006;</NoWarn>
   </PropertyGroup>
 
 </Project>
