--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@
 /openGl_test/bin/Debug/netcoreapp3.1/openGl_test.dll
 /openGl_test/bin/Debug/netcoreapp3.1/openGl_test.deps.json
 /.vs/ogl1/v16/.suo
+/openGl_test/bin/Release/netcoreapp3.1/openGl_test.deps.json
+/openGl_test/bin/Release/netcoreapp3.1/openGl_test.dll
+/openGl_test/bin/Release/netcoreapp3.1/openGl_test.exe
+/openGl_test/bin/Release/netcoreapp3.1/openGl_test.pdb
+/openGl_test/bin/Release/netcoreapp3.1/openGl_test.runtimeconfig.dev.json
+/openGl_test/bin/Release/netcoreapp3.1/openGl_test.runtimeconfig.json
